# shared-std-rust-csharp

./: .gitignore  Cargo.toml  README.md  TODOS.md
csharp_example/: Program.cs  settings.json
csharp_tests/: Example.Tests.csproj  LibraryTests.cs
src/: lib.rs
src/modules/: config.rs  crypto.rs  events.rs  fs_utils.rs  logging.rs  math.rs  net.rs  parallel.rs  regex_engine.rs  shell.rs  state.rs  sys_info.rs  text.rs
