[package]
name = "shared-std-rust-csharp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
sha2 = "0.10"
base64 = "0.22"
ureq = "2.9"
open = "5.1"
hex = "0.4"
rayon = "1.10"
regex = "1.11"
